--- a/css/piece.css
+++ b/css/piece.css
@@ -8,7 +8,7 @@
   transition: top 500ms ease-in-out, left 500ms ease-in-out;
 }
 
-.piece.piece__drag {
+.piece__drag {
   position: absolute;
   width: var(--cell-size);
   height: var(--cell-size);
@@ -17,6 +17,14 @@
   left: calc(var(--x) * var(--cell-size));
   transition: top 0ms ease-in-out, left 0ms ease-in-out;
 }
-.piece.piece__fast-travel {
+.piece__fast-travel {
   transition: top 1ms ease-in-out, left 1ms ease-in-out;
+}
+
+.pieces__settings {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  gap: 20px;
 }
